# rust-commander

./: ARCHITECTURE.md  Cargo.toml  README.md  WINDOWS_TERMINAL_STRATEGY.md  build.rs
locales/: de.yml  en.yml  fr.yml
packaging/linux/: build-deb.sh  debian-control  debian-postinst  dev.rcommander.Gtk.desktop  install-local-desktop-entry.sh  setup-ubuntu.sh
packaging/macos/: build-dmg.sh  stage-runtime.sh
packaging/windows/: Product.wxs  build-installer.ps1  stage-runtime.ps1
src/: config.rs  i18n.rs  lib.rs  main.rs  presentation.rs
src/application/: app_state.rs  commander.rs  commands.rs  errors.rs  load_scheduler.rs  mod.rs  navigation.rs  operation.rs  operation_runner.rs
src/application/services/: config_store.rs  entry_loader.rs  mod.rs  platform_port.rs  session_store.rs  task_spawner.rs
src/archive/: detector.rs  error.rs  iso_backend.rs  libarchive.rs  mod.rs  path.rs  plugin.rs  probe.rs  registry.rs  service.rs  sevenzip.rs  unrar.rs  zip_backend.rs
src/archive/testdata/: sevenzip-listing.txt
src/domain/: entry.rs  entry_key.rs  mod.rs  operation.rs  panel.rs  panel_location.rs  panel_selection.rs  roots.rs  selection.rs  sorting.rs
src/fs/: mod.rs  operations.rs  reader.rs  watcher.rs
src/platform/: assets.rs  context_menu.rs  icons.rs  mod.rs  open.rs  terminal.rs  tray.rs  unix.rs  window_geometry.rs  windows.rs  x11_window_icon.rs
src/remote/: mod.rs  path.rs  service.rs  session.rs
src/ui/: ARCHITECTURE.md  columns.rs  commander_view.rs  dialogs.rs  dialogs_base.rs  dialogs_operations.rs  dialogs_remote.rs  dialogs_settings.rs  dialogs_unix.rs  editor_dialog.rs  file_panel_view.rs  file_row_object.rs  file_viewer_dialog.rs  glib_poll.rs  gtk_app.rs  main_window.rs  main_window_actions.rs  main_window_actions_file.rs  main_window_actions_remote.rs  main_window_actions_terminal.rs  main_window_command_bar.rs  main_window_context_menu.rs  main_window_context_menu_unix.rs  main_window_controllers.rs  main_window_hosts.rs  main_window_hosts_impl.rs  main_window_navigation.rs  main_window_navigation_load.rs  main_window_navigation_watch.rs  main_window_operations.rs  main_window_operations_archive.rs  main_window_operations_transfer.rs  main_window_panel_wiring.rs  main_window_runtime.rs  main_window_startup.rs  main_window_terminal.rs  main_window_window_chrome.rs  main_window_window_state.rs  mod.rs  navigation.rs  (+10 more)
src/viewer/: file_source.rs  hex_view.rs  line_index.rs  mod.rs  text_view.rs  viewer_state.rs
tests/: architecture_guard.rs
tests/unit/: application_commander_tests.rs  application_load_scheduler_tests.rs  archive_detector_tests.rs  archive_path_tests.rs  archive_unrar_tests.rs  config_tests.rs  domain_panel_tests.rs  domain_selection_tests.rs  domain_sorting_tests.rs  fs_operations_tests.rs  fs_reader_tests.rs  i18n_tests.rs  platform_icons_tests.rs  platform_icons_windows_tests.rs  platform_tray_windows_tests.rs  platform_windows_tests.rs  remote_path_tests.rs  remote_service_tests.rs  viewer_file_source_tests.rs  viewer_hex_view_tests.rs  viewer_line_index_tests.rs  viewer_text_view_tests.rs  viewer_viewer_state_tests.rs
