[package]
name = "rust-commander"
version = "0.1.0"
edition = "2021"
description = "A clean GTK4 two-pane file commander"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_12"] }
memchr = "2.7.4"
notify = "8.2.0"
sourceview5 = { version = "0.11.0", features = ["gtk_v4_12"] }
image = "0.24"
ico = "0.4"
rust-i18n = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
unrar = "0.5.8"
zip = { version = "0.6.6", default-features = true }

[build-dependencies]
winres = "0.1.11"

[target.'cfg(all(not(target_os = "windows"), not(target_os = "macos")))'.dependencies]
vte4 = { version = "0.10.0", features = ["v0_72"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13.2", features = ["image"] }
gdk_x11 = { version = "0.11.0", package = "gdk4-x11" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
