[package]
name = "rcommander"
version = "0.3.0"
edition = "2021"
description = "A clean GTK4 two-pane file commander"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_12"] }
iso9660_simple = "0.2.7"
memchr = "2.7.4"
notify = "8.2.0"
sourceview5 = { version = "0.11.0", features = ["gtk_v4_12"] }
image = "0.24"
ico = "0.4"
rust-i18n = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
ssh2 = "0.9.5"
toml = "0.8.23"
trash = "5"
unrar = "0.5.8"
zip = { version = "0.6.6", default-features = true }

[build-dependencies]
winres = "0.1.11"

[target.'cfg(all(not(target_os = "windows"), not(target_os = "macos")))'.dependencies]
vte4 = { version = "0.10.0", features = ["v0_72"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libarchive = "0.1.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13.2", features = ["image"] }
gdk_x11 = { version = "0.11.0", package = "gdk4-x11" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging"] }
